--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
     color: #777777;
-<<<<<<< HEAD
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
@@ -51,7 +50,7 @@ p {
     font-size: 15px;
 }
 .top {
-    height: 59px;
+    height: 58px;
     width: 100%;
     background-color: white;
 }
@@ -114,47 +113,29 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-=======
 }
 
-header {
-    background-color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-h1 {
-    font-size: 20px;
-}
-h2 {
-    color: #4aaaa5;
-}
-
-.mainTitle {
+.containerL {
+    margin: 0;
+    float: left;
+    position: relative;
     text-align: center;
-    background-color: #4aaaa5;
     color: white;
-    font-weight: bold;
-    float: left;
-    padding: 0px 20px;
 }
 
-a {
-    color: #777777;
-    text-decoration: none;
-}
-
-.tabs {
+.containerR {
+    margin: 0;
+    float: right;
+    position: relative;
     text-align: center;
-    font-size: 10px;
-    padding: 10px 20px;
-    
+    color: white;
 }
 
-.container {
-    width: 960 px;
-    text-align: left;
-    float: left;
-    margin: 0 auto;
-    border: 500 px;
-    border-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/congruent_pentagon.png")  ;
->>>>>>> f43a0b4b4976702481a9c4d22acfd6fa11efeb07
+.portTitle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4aaaa5;
+    padding: 1% 20px;
 }
