--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 h1 {
     position: relative;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -23,6 +24,13 @@ h2 {
     color: #4aaaa5;
 }
 
+h3 {
+    text-align: left;
+    color: #777777;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    margin: 0% 0% 2% 3%;
+}
 
 hr {
     border: none;
@@ -48,14 +56,8 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
     font-size: 15px;
+    margin: 2%;
 }
-.top {
-    height: 58px;
-    width: 100%;
-    background-color: white;
-}
-
-
 
 a {
     color: #777777;
@@ -64,6 +66,11 @@ a {
     font-size: 15px;
 }
 
+.top {
+    height: 58px;
+    width: 100%;
+    background-color: white;
+}
 
 .bottom {
     height: 500px;
@@ -129,6 +136,8 @@ a {
     position: relative;
     text-align: center;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 .portTitle {
@@ -137,5 +146,57 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #4aaaa5;
-    padding: 1% 20px;
+    width: 17%;
+    text-align: center;
+    padding: 8.2px;
+}
+
+form {
+    margin: 0%;
+    width: 925px;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+}
+  
+form div + div {
+    margin-top: 1em;
+}
+
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    display: inline-block;
+    width: 90px;
+    text-align: left;
+    margin: 0% 0% 0% 3%;
+    color: #777777;
+    padding-top: 1%;
+}
+  
+input, textarea {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    width: 850px;
+    box-sizing: border-box;
+    border: 1px solid #999;
+    margin: 0% 0% 0% 3%;
+}
+  
+input:focus, textarea:focus {
+    border-color: #000;
+}
+  
+textarea {
+    vertical-align: top;
+    height: 5em;
+    padding: 1%;
+}  
+ 
+button {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    margin: 2% 0% 2% 3%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
